2003-05-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cobol/skeleton.c (log_symbol_filename,
	main):
	* parsers/cpp/skeleton.c (log_symbol_filename,
	main):
	* parsers/fortran/ftnchek.c (log_symbol_filename,
	main):
	* parsers/java/skeleton.c (log_symbol_filename,
	main):
	* parsers/tcl/skeleton.c (log_symbol_filename,
	main):
	* parsers/toolbox/snptools.c (sn_register_filename,
	sn_main):
	Rework parser command line logic so that either a
	-y option or a file name is required. The parsers
	no longer try to read from stdin since the
	functionality is no longer needed by the IDE
	and results is pointless complexity. Rework
	the log_symbol_filename implementations so
	they more closely match each other.

2003-05-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/fortran/forlex.c (IncludeFileStack,
	push_include_file, pop_include_file, advance):
	Rename input_fd to yyin.
	* parsers/fortran/ftnchek.c (log_symbol_filename,
	main):
	Move fclose(hig_fp) call just before hig_fp
	is reset, that better matches the logic in
	other implementations of log_symbol_filename.
	Avoid calling freopen() to change the fd
	associated with stdin. Call fclose() and
	fopen() to manipulate the yyin file pointer.
	Don't set input_fd since this is handled
	by the yyin logic in log_symbol_filename.
	Close yyin at the end of main.
	* parsers/fortran/ftnchek.h: Rename input_fd
	to yyin.

2003-05-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/editorpane.tcl (UpdateHighlights): Comment
	out code that checks in the database for a
	highlight file. This code worked on the
	assumption that the parser would write an
	entry into the database for a highlight file.
	Since the parsers were modified so that they
	don't write into the database, this is never
	going to happen. Don't pass the -n option
	to the highlighter, the c/c++ parser is
	the only one that requires a -n option and
	it has an in-process syntax highlighter already.
	Rework the logic when a file has been modified